--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,13 +9,16 @@
     # week,7 代表每周日刷新一次
     # week,1 代表每周一刷新一次
     # month,1 代表每月 1 日刷新一次
-    刷新日期设置: "month,1"
+    日期设置: "month,1"
 
     # 代表刷新的时间
-    刷新时间设置: "20:00"
+    时间设置: "20:00"
 
     # 会自动设置刷新日期用来判断是否需要刷新, 你也可以手动设置刷新日期, 格式为 年,月,日,小时,分钟
-    下次刷新时间: "-1"
+    触发时间: "-1"
+
+    # 是否更换种子
+    更换种子: true
 
     # 自动设置刷新世界后的游戏规则
     游戏规则设置:
@@ -27,10 +30,20 @@
   # 需要刷新的第二个世界
   world_example:
 
-    刷新日期设置: "month,1"
-    刷新时间设置: "20:00"
-    下次刷新时间: "-1"
+    日期设置: "month,1"
+    时间设置: "20:00"
+    触发时间: "-1"
+    更换种子: true
     游戏规则设置:
       - 'keepInventory,true'
       - 'doImmediateRespawn,true'
 
+自动删除文件:
+
+  日志文件:
+    日期设置: "day,1"
+    时间设置: "20:00"
+    刷新时间: "-1"
+    文件路径:
+      - 'logs'
+      - 'crash-reports'
