--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -41,9 +41,11 @@
 自动删除文件:
 
   日志文件:
-    日期设置: "day,1"
+    日期设置: "day,7"
     时间设置: "20:00"
-    刷新时间: "-1"
+    #　删除七天内未访问的文件
+    过期天数: 7
+    触发时间: "-1"
     文件路径:
       - 'logs'
       - 'crash-reports'
