--- a/build.gradle
+++ b/build.gradle
@@ -57,6 +57,11 @@ repositories {
         url "https://repo.onarandombox.com/content/repositories/multiverse/"
     }
 
+    maven {
+        name "Paper-1.17"
+        url 'https://papermc.io/repo/repository/maven-public/'
+    }
+
 
 }
 
@@ -77,8 +82,9 @@ dependencies {
 //    compileOnly 'world.bentobox:bentobox:1.16.1-SNAPSHOT'
 //    compileOnly group: "com.comphenix.protocol", name: "ProtocolLib", version: "4.6.0";
 //    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
-//    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
+//    compileOnly 'org.spigotmc:spigot-api:1.12.2-R0.1-SNAPSHOT'
+    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
+//    compileOnly 'io.papermc.paper:paper-api:1.17.1-R0.1-SNAPSHOT'
 //    compile 'org.jetbrains:annotations:16.0.2'
 //    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
 //    compile "com.entiv:SakuraLibrary:1.0"
