--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,4 @@
-
-# 需要 Multiverse-Core 插件作为前置插件,支持自己添加多个需要刷新的世界
+# 需要 Multiverse-Core 插件作为前置插件, 支持自己添加多个需要刷新的世界
 自动刷新世界:
   # 世界名
   world_resource:
@@ -11,7 +10,7 @@
     # month,1 代表每月 1 日刷新一次
     日期设置: "month,1"
 
-    # 代表刷新的时间
+    # 代表刷新的时间, 24小时制, 现在的意思是晚上 8 点刷新
     时间设置: "20:00"
 
     # 会自动设置刷新日期用来判断是否需要刷新, 你也可以手动设置刷新日期, 格式为 年,月,日,小时,分钟
@@ -43,7 +42,7 @@
   日志文件:
     日期设置: "day,7"
     时间设置: "20:00"
-    #　删除七天内未访问的文件
+    #　过期天数设为 7 可以保留 7 天内的配置文件
     过期天数: 7
     触发时间: "-1"
     文件路径:
