--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -42,8 +42,8 @@
   日志文件:
     日期设置: "day,7"
     时间设置: "20:00"
-    #　过期天数设为 7 可以保留 7 天内的配置文件
-    过期天数: 7
+    # 保留 7 天内的日志文件
+    保留天数: 7
     触发时间: "-1"
     文件路径:
       - 'logs'
