--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,8 @@ name: AutoRespawnWorld
 main: com.entiv.${name}.Main
 version: ${version}
 api-version: "1.16"
-
+depend:
+  - Multiverse-Core
 commands:
   AutoRespawnWorld:
     description: do something
