配置文件优化, 路径问题修复

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,6 +1,5 @@
-# 需要 Multiverse-Core 插件作为前置插件, 支持自己添加多个需要刷新的世界
 自动刷新世界:
-  # 世界名
+  # 在这里填写需要自动刷新的世界名
   world_resource:
 
     # day,1 代表每天刷新一次
@@ -8,15 +7,17 @@
     # week,7 代表每周日刷新一次
     # week,1 代表每周一刷新一次
     # month,1 代表每月 1 日刷新一次
+    # month,15 代表每月 15 日刷新一次
     日期设置: "month,1"
 
-    # 代表刷新的时间, 24小时制, 现在的意思是晚上 8 点刷新
+    # 代表刷新的时间, 结合上面那条就是每月 1 日晚上 8 点刷新
     时间设置: "20:00"
 
-    # 会自动设置刷新日期用来判断是否需要刷新, 你也可以手动设置刷新日期, 格式为 年,月,日,小时,分钟
+    # 用于插件内部记录下一次刷新世界的时间, 当时间到达的时间后会自动刷新
+    # 插件会自动设置, 无需手动设置, 手动设置下一次刷新时间也是支持的, 格式为 年,月,日,小时,分钟
     触发时间: "-1"
 
-    # 是否更换种子
+    # 是否更换地图种子
     更换种子: true
 
     # 自动设置刷新世界后的游戏规则
@@ -26,20 +27,13 @@
       # 不显示死亡界面直接重生
       - 'doImmediateRespawn,true'
 
-  # 需要刷新的第二个世界
-  world_example:
+  # 支持添加更多世界, 复制上面的配置文件即可
 
-    日期设置: "month,1"
-    时间设置: "20:00"
-    触发时间: "-1"
-    更换种子: true
-    游戏规则设置:
-      - 'keepInventory,true'
-      - 'doImmediateRespawn,true'
-
+# 自动删除文件功能
 自动删除文件:
 
   日志文件:
+    # 每 7 天清理一次配置文件
     日期设置: "day,7"
     时间设置: "20:00"
     # 保留 7 天内的日志文件
