--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'maven'
 
 group 'com.entiv'
-version '1.1'
+version '1.3'
 
 repositories {
 
@@ -94,4 +94,4 @@ dependencies {
 }
 
 [compileJava,compileTestJava]*.options*.encoding = 'UTF-8'
-libsDirName = 'C:\\Users\\EnTIv\\Desktop\\minecraft\\server\\paper-1.17\\plugins'
+libsDirName = "${outputPath}"
