--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -37,8 +37,8 @@
 自动删除文件:
   # 支持添加更多删除方案和删除路径
   日志文件:
-    # 每 7 天清理一次配置文件
-    日期设置: "day,7"
+    # 每天清理一次日志文件
+    日期设置: "day,1"
     时间设置: "20:00"
     # 保留 7 天内的日志文件
     保留天数: 7
