新增 tab 补全 新增自动执行指令 修复自动删除文件保留天数功能异常问题

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,6 +34,25 @@
 
   # 支持添加更多世界, 复制上面的世界配置文件后修改世界名即可
 
+# 定时自动执行指令的功能
+自动执行指令:
+  # 支持添加更多指令执行
+  coi数据清理:
+    # 每天 3:30 执行 co i purge t:7d 指令
+    日期设置: "day,1"
+    时间设置: "3:30"
+    保留天数: 7
+    触发时间: "-1"
+    执行指令:
+      - 'co i purge t:7d'
+  自动重启:
+    # 每天 6 点自动重启服务器
+    日期设置: "day,1"
+    时间设置: "6:00"
+    触发时间: "-1"
+    执行指令:
+      - 'restart'
+
 # 自动删除文件功能
 自动删除文件:
   # 支持添加更多删除方案和删除路径
