--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,21 +3,23 @@
   # 在这里填写需要自动刷新的世界名, world_resource 就是当前所需刷新的世界名
   world_resource:
 
-    # day,1 代表每天刷新一次
-    # day,3 代表每 3 天刷新一次
-    # week,7 代表每周日刷新一次
-    # week,1 代表每周一刷新一次
-    # month,1 代表每月 1 日刷新一次
-    # month,15 代表每月 15 日刷新一次
-    日期设置: "month,1"
+    # second:30 代表每 30 秒刷新一次
+    # minute:10 代表每 10 分钟刷新一次
+    # hour:3 代表每 3 小时刷新一次
 
-    # 代表刷新的时间, 结合上面那条就是每月 1 日晚上 8 点刷新
-    # 从 0:00 到 23:59
-    时间设置: "20:00"
+    # date:10-01, 7:56:00 代表每年的 10 月 1 日 7:56 刷新一次
 
-    # 用于插件内部记录下一次刷新世界的时间, 当时间到达的时间后会自动刷新
-    # 插件会自动设置, 无需手动设置, 手动设置下一次刷新时间也是支持的, 格式为 年,月,日,小时,分钟
-    触发时间: "-1"
+    # day:1, 20:00:00 代表每天 20:00 刷新一次
+    # day:3, 0:00:00 代表每 3 天的 0:00 刷新一次
+    # week:4, 23:59:00 代表每周 4 的 23:59 刷新一次
+    # week:1, 6:00:00 代表每周 1 的 6:00 刷新一次
+    # month:15, 12:34:45 代表每月 15 日的 12:34:45 刷新一次
+    # year:233, 0:00:00 代表每年的第 233 天的 0:00:00 刷新一次
+
+    日期设置: "month:1, 20:00:00"
+    # 用于插件内部记录下一次刷新世界的时间, 当时间到达的指定时间后会自动刷新, 插件会自动设置, 无需手动设置
+    # 支持手动设置触发时间, 格式为 yyyy-mm-dd, hr:mi:se, 例如 2050-09-13, 07:12:15 为 2050年9月13日, 上午7点12分15秒
+    触发时间: "2021-5-7, 12:15:16"
 
     # 是否更换地图种子
     更换种子: true
@@ -50,12 +52,11 @@
     # 每天 3:30 执行 co i purge t:7d 指令
     日期设置: "day,1"
     时间设置: "3:30"
-    保留天数: 7
     触发时间: "-1"
     执行指令:
       - 'co i purge t:7d'
   自动重启:
-    # 每天 6 点自动重启服务器
+    # 每天 6 点执行 restart 指令重启服务器
     日期设置: "day,1"
     时间设置: "6:00"
     触发时间: "-1"
