--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -9,17 +9,17 @@
 
     # date:10-01, 07:56:00 代表每年的 10 月 1 日 7:56 刷新一次
 
-    # day:1, 20:00:00 代表每天 20:00 刷新一次
-    # day:14, 00:00:00 代表每 14 天的 0:00 刷新一次
-    # week:4, 23:59:00 代表每周 4 的 23:59 刷新一次
-    # week:1, 06:00:00 代表每周 1 的 6:00 刷新一次
+    # day:1, 20:00:00 代表每天 20:00:00 刷新一次
+    # day:14, 00:00:00 代表每 14 天的 00:00:00 刷新一次
+    # week:4, 23:59:59 代表每周 4 的 23:59:59 刷新一次
+    # week:1, 06:00:00 代表每周 1 的 06:00:00 刷新一次
     # month:15, 12:34:45 代表每月 15 日的 12:34:45 刷新一次
-    # year:233, 00:00:00 代表每年的第 233 天的 0:00:00 刷新一次
+    # year:233, 00:00:00 代表每年的第 233 天的 00:00:00 刷新一次
 
-    日期设置: "month:1, 20:00:00"
+    时间设置: "month:1, 20:00:00"
     # 用于插件内部记录下一次刷新世界的时间, 当时间到达的指定时间后会自动刷新, 插件会自动设置, 无需手动设置
-    # 支持手动设置触发时间, 格式为 yyyy-mm-dd, hr:mi:se, 例如 2050-09-13, 07:12:15 为 2050年9月13日, 上午7点12分15秒
-    触发时间: "2021-5-7, 12:15:16"
+    # 支持手动设置到期时间, 格式为 yyyy-mm-dd, hr:mi:se, 例如 2050-09-13, 07:12:15 为 2050年9月13日, 上午7点12分15秒
+    到期时间: ""
 
     # 是否更换地图种子
     更换种子: true
@@ -36,43 +36,37 @@
 
   # 自动刷新 world_test 世界, 支持添加更多世界, 像这样复制在下面添加即可
   world_test:
-    日期设置: "month,1"
-    时间设置: "20:00"
-    触发时间: "-1"
+    时间设置: "week:7, 20:00:00"
     更换种子: true
     刷新执行指令:
       - 'mvgamerule keepInventory true %world%'
       - 'mvgamerule doImmediateRespawn true %world%'
 
-
-# 定时自动执行指令的功能
-自动执行指令:
-  # 支持添加更多指令执行
+# 定时自动执行任务的功能
+自动执行任务:
   coi数据清理:
     # 每天 3:30 执行 co i purge t:7d 指令
-    日期设置: "day,1"
-    时间设置: "3:30"
-    触发时间: "-1"
-    执行指令:
-      - 'co i purge t:7d'
+    时间设置: "day:1, 03:30:00"
+    执行任务:
+      - 'console: co i purge t:7d'
   自动重启:
-    # 每天 6 点执行 restart 指令重启服务器
-    日期设置: "day,1"
-    时间设置: "6:00"
-    触发时间: "-1"
-    执行指令:
-      - 'restart'
-
+    # 每天 4 点执行 restart 指令重启服务器
+    时间设置: "day:1, 04:00:00"
+    执行任务:
+      - 'console: restart'
+  自动公告:
+    # 每分钟自动公告
+    时间设置: "minute:1"
+    执行任务:
+      - 'broadcast: 资源世界每日刷新, 请不要在资源时间建家哦'
 # 自动删除文件功能
 自动删除文件:
   # 支持添加更多删除方案和删除路径
   日志文件:
     # 每天清理一次日志文件
-    日期设置: "day,1"
-    时间设置: "20:00"
+    时间设置: "day:1, 00:00:00"
     # 保留 7 天内的日志文件
     保留天数: 7
-    触发时间: "-1"
     文件路径:
       - 'logs'
       - 'crash-reports'
