--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,7 +18,7 @@
 
     时间设置: "month:1, 20:00:00"
     # 用于插件内部记录下一次刷新世界的时间, 当时间到达的指定时间后会自动刷新, 插件会自动设置, 无需手动设置
-    # 支持手动设置到期时间, 格式为 yyyy-mm-dd, hr:mi:se, 例如 2050-09-13, 07:12:15 为 2050年9月13日, 上午7点12分15秒
+    # 支持手动设置到期时间, 例如 2050-09-13, 07:12:15 为 2050 年 9 月 13 日, 上午 7 点 12 分 15 秒
     到期时间: ""
 
     # 是否更换地图种子
