--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,1 @@
-outputPath = C:\\Users\\EnTIv\\Desktop\\minecraft\\server\\paper-1.17\\plugins
+outputPath = C:\\Users\\EnTIv\\Desktop\\minecraft\\server\\purpur-1.18\\plugins
